--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           
           <h4>PHARRELL WILLIAMS</h4>
           <h2> 'HAPPY' </h2>
-<h4>FROM DESPICABLE ME...</h4>
+          <h4>FROM DESPICABLE ME...</h4>
  
         </div>
       </div>
@@ -21,19 +21,19 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
+        <h3></h3>
         <!-- Level 1 'HAPPY' Header -->
-
+        <h1></h1>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+        <h3></h3>
         <!-- pararaph text 'PUBLISHED BY...' -->
-
+        <p></p>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
+        <span></span>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+        <img>
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+        <span></span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
