--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <span>PHARRELLWILLIAMS.COM</span>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img href columbia-logo.png>
+        <img src="columbia-logo.png" alt="columbia logo">
         <!-- span text 'COLUMBIARECORDS.COM' -->
-        <span></span>
+        <span>COLUMBIARECORDS.COM'</span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+        <img src="sony-logo" alt="sony's logo">
       </div>
     </div>
   </body>
